--- a/app/views/positivity/index.html.erb
+++ b/app/views/positivity/index.html.erb
@@ -1,12 +1,13 @@
-<div class="page-header">
-    <%= link_to "Register to Vote!", "https://www.usa.gov/register-to-vote", method: "get", class: "btn-lg", id:"registration-button" %>
-    <%= image_tag( "banner-copy2.svg", class: "candidates-page-image", id: "element") %>
-    <%= link_to "Candidate Standings", polls_path, method: "get", class: "btn-lg", id:"poll-button" %>
-    <%= link_to "Candidate Positions", candidates_path, method: "get", class: "btn-lg", id:"candidates-button" %>
-</div>
-
-<h1 class="chart-title">Most Positive Tweeters: Primary Frontrunners</h1>
-<h5 class="chart-subtitle">Measured by Previous 25 Tweets</h5>
-  <div id="wrapper">
-    <%= javascript_include_tag("positivity")%>
+<div class="container">
+  <div class="page-header">
+   <%= render "header" %>
   </div>
+
+  <div class="body-container">
+    <h1 class="chart-title">Most Positive Tweeters: Primary Frontrunners</h1>
+    <h5 class="chart-subtitle">Measured by Previous 25 Tweets</h5>
+      <div id="wrapper">
+        <%= javascript_include_tag("positivity")%>
+      </div>
+  </div>
+</div>
